--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
         <div class="row">
             <div class="col-md-12 timer">
                 <h2 class="timerLabel">Timer <span class="timerText">0</span> seconds</h2>
+                <br>
+                <br>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-12 questionRow">
-                <h2 class="question1">1. This is question 1.</h2> 
+                <h2 id="question"></h2> 
                 <br>
             </div>
             
@@ -39,10 +41,10 @@
 
         <div class="row">
             <div class="col-md-12 answers">
-                <h3 class="answer1">This is answer 1.</h3>
-                <h3 class="answer2">This is answer 2.</h3>
-                <h3 class="answer3">This is answer 3.</h3>
-                <h3 class="answer4">This is answer 4.</h3>
+                <h3 class="answers" id="answer1"></h3>
+                <h3 class="answers" id="answer2"></h3>
+                <h3 class="answers" id="answer3"></h3>
+                <h3 class="answers" id="answer4"></h3>
             </div>
         </div>
 
