--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12 answers">
+            <div class="col-md-12 answersCol">
                 <h3 class="answers" id="answer1"></h3>
                 <h3 class="answers" id="answer2"></h3>
                 <h3 class="answers" id="answer3"></h3>
