--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
         </div>
 
         <div class="row">
+            <div class="col-md-12 button">
+                <button type="button">Start!</button>
+
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-12 questionRow">
                 <h2 id="question"></h2> 
                 <br>
@@ -45,6 +52,12 @@
                 <h3 class="answers" id="answer2"></h3>
                 <h3 class="answers" id="answer3"></h3>
                 <h3 class="answers" id="answer4"></h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 imageCol">
+
             </div>
         </div>
 
